unpackaged/main/default/objects/Audit_Action__c/Audit_Action__c.object-meta.xml
<CustomObject>
    <label>Audit Action</label>
    <nameField>
        <label>Audit Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>