unpackaged/main/default/objects/Audit_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Type of Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>EDIT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>