unpackaged/main/default/objects/Audit_Action__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSL_Service_Line_Item__c</fullName>
                <label>Service Line Item</label>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
                <label>Work Order</label>
            </value>
            <value>
                <fullName>FSL_TroubleCode__c</fullName>
                <label>TroubleCode</label>
            </value>
            <value>
                <fullName>Entitlement</fullName>
                <isActive>false</isActive>
                <label>Entitlement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>