unpackaged/main/default/objects/Audit_Action__c/fields/Identifying_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Identifying_Attribute__c</fullName>
    <label>Identifying Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product__r.ProductCode</fullName>
                <label>Service Item Code</label>
            </value>
            <value>
                <fullName>Resolution_Code__c</fullName>
                <label>Resolution Code</label>
            </value>
            <value>
                <fullName>Clear_Code__c</fullName>
                <label>Clear Code</label>
            </value>
            <value>
                <fullName>Entitlement_code</fullName>
                <label>Entitlement Code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>