unpackaged/main/default/objects/Audit_Action__c/fields/Identifying_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Identifying_Attribute_Value__c</fullName>
    <label>Identifying Attribute (New)  Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>