unpackaged/main/default/objects/Audit_Action__c/fields/Identifying_Value__c.field-meta.xml
<CustomField>
    <fullName>Identifying_Value__c</fullName>
    <label>Identifying Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>