unpackaged/main/default/objects/Audit_Action__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>