unpackaged/main/default/objects/Audit_Action__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>