unpackaged/main/default/objects/Audit_Action__c/recordTypes/Add_Action.recordType-meta.xml
<RecordType>
    <fullName>Add_Action</fullName>
    <active>true</active>
    <label>Add Action</label>
</RecordType>