unpackaged/main/default/objects/Audit_Action__c/recordTypes/Delete_Action.recordType-meta.xml
<RecordType>
    <fullName>Delete_Action</fullName>
    <active>true</active>
    <label>Delete Action</label>
</RecordType>