unpackaged/main/default/objects/Audit_Action__c/recordTypes/Edit_Action.recordType-meta.xml
<RecordType>
    <fullName>Edit_Action</fullName>
    <active>true</active>
    <label>Edit Action</label>
</RecordType>